Fixed multi-select out of view

--- a/src/assets/styles/modules/common/_multi-select.scss
+++ b/src/assets/styles/modules/common/_multi-select.scss
@@ -57,7 +57,6 @@
         padding: 6px;
         border-radius: 4px;
         border: 1px solid $gray-400;
-        transform: translateY(6px);
         z-index: 20;
         overflow-y: auto;
 
